those changes got lost while rebasing, displays loading message below the annotation pins to prevent a jumping effect

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -312,7 +312,7 @@ table.dataTable img {
   -moz-border-radius-bottomleft: 10px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  line-height: 1px;
+  line-height: 0px;
   height: 4px;
   width: 70px;
 
@@ -345,11 +345,11 @@ table.dataTable img {
   -moz-border-radius-topright: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  line-height: 1px;
+  line-height: 0px;
 
   img {
     margin-bottom: -2px;
-    line-height: 1px;
+    line-height: 0px;
   }
 }
 
